@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#3857] Fix placeholder processing when output filters applied
 - [#4362] Fix path issues with Static Resources and base_urls of /
 - [#4074] Require list permission on Context for Resource searches
 - [#4439] Do not allow invalid characters in username / password
